Add tasks vertical slice
